--- a/Digitaliza-Frontend/package.json
+++ b/Digitaliza-Frontend/package.json
@@ -14,12 +14,22 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-data-grid": "^8.15.0",
+    "@mui/x-data-grid-generator": "^8.15.0",
+    "@mui/x-data-grid-premium": "^8.15.0",
+    "@mui/x-date-pickers": "^8.16.0",
+    "@tanstack/react-table": "^8.21.3",
+    "export-to-csv": "^1.4.0",
+    "file-saver": "^2.0.5",
+    "material-react-table": "^3.2.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
