--- a/Digitaliza-Frontend/package.json
+++ b/Digitaliza-Frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid-generator": "^8.15.0",
     "@mui/x-data-grid-premium": "^8.15.0",
     "@mui/x-date-pickers": "^8.16.0",
+    "@tanstack/react-query": "^5.90.7",
     "@tanstack/react-table": "^8.21.3",
     "export-to-csv": "^1.4.0",
     "file-saver": "^2.0.5",
