--- a/Digitaliza-Frontend/package.json
+++ b/Digitaliza-Frontend/package.json
@@ -20,6 +20,7 @@
     "@mui/x-date-pickers": "^8.16.0",
     "@tanstack/react-query": "^5.90.7",
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.13.2",
     "export-to-csv": "^1.4.0",
     "file-saver": "^2.0.5",
     "material-react-table": "^3.2.1",
