--- a/Digitaliza-Frontend/package.json
+++ b/Digitaliza-Frontend/package.json
@@ -27,6 +27,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.4.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
